--- a/server/.env
+++ b/server/.env
@@ -4,8 +4,8 @@ CLIENT_URL=http://localhost:3000
 AUTH0_AUDIENCE=https://server-dev.designxr.com.au
 AUTH0_DOMAIN=designxr-dev.au.auth0.com
 
-// do not set these in production - they will come from the ECS environment
+// do not set these when deployed to AWS - they will come from the ECS environment
 // see https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/setting-credentials-node.html
-AWS_ACCESS_KEY_ID=AKIAYJ6EYZ55VNJVNKMH
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=todo-set-aws-access-key-id-local
+AWS_SECRET_ACCESS_KEY=todo-set-aws-access-key-secret-local
 AWS_REGION=ap-southeast-2
