--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,12 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "etsc",
+    "build": "tsc --build",
     "start": "node ./dist/server.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "esbuild": "^0.18.7",
-    "esbuild-node-tsc": "^2.0.5",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
   },
