--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0",
     "zod": "^3.22.4"
