--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@hypertheme-editor/chakra-ui": "^0.1.6-rc.0",
     "@swc/helpers": "~0.5.2",
     "@tanstack/react-query": "^5.8.7",
