--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "6.11.2",
+    "react-table": "^7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.22.4"
   },
@@ -57,6 +58,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/react-table": "^7.7.18",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-react": "~4.0.0",
